add endpoint add points
