# server/routes/points.route.js
@@ -6,13 +6,13 @@ const router = express.Router(); // eslint-disable-line new-cap
 /**
  * POST  - increments one point to desired user
  */
-router.route('/points/add')
+router.route('/add')
   .post(pointsCtrl.addPoints);
 
 /**
  * GET - obtains points for desired user
  */
-router.route('/points/get/:userId')
+router.route('/get/:userId')
   .get(pointsCtrl.getPoints);
 
 
